# GCGE-1.0

./: .gitignore  AUTHORS  Makefile  README.md  daily_git  log
app/csr/: Makefile  gcge_app_csr.c  gcge_app_csr.h
app/hypre/: Makefile  gcge_app_hypre.c  gcge_app_hypre.h
app/pase/: Makefile
app/petsc/: Makefile  gcge_app_petsc.c  gcge_app_petsc.h
app/phg/: Makefile  gcge_app_phg.c  gcge_app_phg.h
app/slepc/: Makefile  gcge_app_slepc.c  gcge_app_slepc.h
blaslapack/blas/: CMakeLists.txt  Makefile  xerbla.f
blaslapack/lapack/: Makefile  dlarft.f  iladlc.f  iladlr.f
config/: make.inc  make.inc.LSSC4  make.inc.Linux  make.inc.linux
csr/: Makefile
csr/app/: Makefile
csr/src/: Makefile  (+1 more)
doc/: Doxyfile  daily_git  log
example/: Makefile  csr_solver.c  hypre_solver.c  petsc_solver.c  phg_solver.c  slepc_solver.c
include/: gcge.h  gcge_cg.h  gcge_eigsol.h  gcge_eigsol_ws.h  gcge_matvec.h  gcge_ops.h  gcge_orthogonal.h  gcge_para.h  gcge_rayleighritz.h  gcge_solver.h  gcge_statistics.h  gcge_type.h  gcge_utilities.h  gcge_workspace.h  gcge_xpw.h
pase/: Makefile  pase.h  pase_gcge.h  pase_matvec.h  pase_mg.h  pase_ops.h
src/: Makefile  eigsol.c  gcge.h  gcge_cg.c  gcge_cg.h  gcge_config.h  gcge_eigsol.c  gcge_eigsol.h  gcge_matvec.c  gcge_matvec.h  gcge_ops.c  gcge_ops.h  gcge_orthogonal.c  gcge_orthogonal.h  gcge_para.c  gcge_para.h  gcge_rayleighritz.c  gcge_rayleighritz.h  gcge_solver.c  gcge_solver.h  gcge_statistics.c  gcge_statistics.h  gcge_type.h  gcge_utilities.c  gcge_utilities.h  gcge_workspace.c  gcge_workspace.h  gcge_xpw.c  gcge_xpw.h
(+67 files in other folders)
